# rust-practise

./: .gitignore  README.md
httpie/: Cargo.toml
httpie/src/: main.rs
scrape_url/: Cargo.toml  rust.md
scrape_url/src/: main.rs
